# SMTP-Client

./: CMakeLists.txt  README.md  main.cpp
include/: smtp_server.h
include/constants/: smtp_constants.h
include/encoders/: base64.h
include/exceptions/: auth_error.h  closing_error.h  connection_error.h  handshaking_error.h  mail_error.h  sending_error.h  smtp_error.h  ssl_error.h
src/: smtp_server.cpp
src/encoders/: base64.cpp
src/exceptions/: auth_error.cpp  closing_error.cpp  connection_error.cpp  handshaking_error.cpp  mail_error.cpp  sending_error.cpp  ssl_error.cpp
